Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
Impala 2.6.0
Description
Last night the stress test hit a DCHECK. Alexander Behm since the parquet scanner looks involved I'm assigning you for first look.
#6 0x00000000027dcbee in google::LogMessageFatal::~LogMessageFatal() () #7 0x00000000015f83fc in bool impala::RleDecoder::Get<int>(int*) () #8 0x00000000016297d3 in impala::DictDecoder<impala::StringValue>::GetValue(impala::StringValue*) () #9 0x000000000162603c in bool impala::HdfsParquetScanner::ScalarColumnReader<impala::StringValue, true>::ReadSlot<true>(void*, impala::MemPool*) () #10 0x0000000001626d06 in bool impala::HdfsParquetScanner::ScalarColumnReader<impala::StringValue, true>::MaterializeValueBatch<false, true>(impala::MemPool*, int, int, unsigned char*, int*) () #11 0x000000000161a8c3 in bool impala::HdfsParquetScanner::ScalarColumnReader<impala::StringValue, true>::ReadValueBatch<false>(impala::MemPool*, int, int, unsigned char*, int*) () #12 0x000000000160c9ec in impala::HdfsParquetScanner::ScalarColumnReader<impala::StringValue, true>::ReadNonRepeatedValueBatch(impala::MemPool*, int, int, unsigned char*, int*) () #13 0x00000000015e9693 in impala::HdfsParquetScanner::AssembleRows(std::vector<impala::HdfsParquetScanner::ColumnReader*, std::allocator<impala::HdfsParquetScanner::ColumnReader*> > const&, int, bool*) () #14 0x00000000015e7e2e in impala::HdfsParquetScanner::ProcessSplit() () #15 0x000000000159e2ac in impala::HdfsScanNode::ProcessSplit(std::vector<impala::FilterContext, std::allocator<impala::FilterContext> > const&, impala::DiskIoMgr::ScanRange*) () #16 0x000000000159d37a in impala::HdfsScanNode::ScannerThread() () #17 0x00000000015b96a5 in boost::_mfi::mf0<void, impala::HdfsScanNode>::operator()(impala::HdfsScanNode*) const () #18 0x00000000015b8828 in void boost::_bi::list1<boost::_bi::value<impala::HdfsScanNode*> >::operator()<boost::_mfi::mf0<void, impala::HdfsScanNode>, boost::_bi::list0>(boost::_bi::type<void>, boost::_mfi::mf0<void, impala::HdfsScanNode>&, boost::_bi::list0&, int) () #19 0x00000000015b72d7 in boost::_bi::bind_t<void, boost::_mfi::mf0<void, impala::HdfsScanNode>, boost::_bi::list1<boost::_bi::value<impala::HdfsScanNode*> > >::operator()() () #20 0x00000000015b50fe in boost::detail::function::void_function_obj_invoker0<boost::_bi::bind_t<void, boost::_mfi::mf0<void, impala::HdfsScanNode>, boost::_bi::list1<boost::_bi::value<impala::HdfsScanNode*> > >, void>::invoke(boost::detail::function::function_buffer&) () #21 0x000000000126e52c in boost::function0<void>::operator()() const () #22 0x0000000001508505 in impala::Thread::SuperviseThread(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()()>, impala::Promise<long>*) () #23 0x000000000150f068 in void boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void ()()> >, boost::_bi::value<impala::Promise<long>*> >::operator()<void (*)(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()()>, impala::Promise<long>*), boost::_bi::list0>(boost::_bi::type<void>, void (*&)(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()()>, impala::Promise<long>*), boost::_bi::list0&, int) () #24 0x000000000150efab in boost::_bi::bind_t<void, void (*)(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()()>, impala::Promise<long>*), boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void ()()> >, boost::_bi::value<impala::Promise<long>*> > >::operator()() () #25 0x000000000150ef6e in boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()()>, impala::Promise<long>*), boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void ()()> >, boost::_bi::value<impala::Promise<long>*> > > >::run() () #26 0x000000000194a4fa in ?? () #27 0x000000323fa079d1 in start_thread () from /lib64/libpthread.so.0 #28 0x000000323f6e88fd in clone () from /lib64/libc.so.6
impala-desktop has the collection info including core files. No minidumps were available.