be/src/util/rle-encoding.h
@@ -278,11 +278,12 @@ bool RleDecoder::NextCounts() {
   bool is_literal = indicator_value & 1;
   if (is_literal) {
     literal_count_ = (indicator_value >> 1) * 8;
+    if (UNLIKELY(literal_count_ == 0)) return false;
   } else {
     repeat_count_ = indicator_value >> 1;
     bool result = bit_reader_.GetAligned<T>(
         BitUtil::Ceil(bit_width_, 8), reinterpret_cast<T*>(&current_value_));
-    DCHECK(result);
+    if (UNLIKELY(!result || repeat_count_ == 0)) return false;
   }
   return true;
 }
